[package]
name = "burial"
version = "0.0.1"
description = "Tools for TCOAAL"
authors = ["kleineluka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [ ] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
sysinfo = "0.30.12"
fs_extra = "1.3.0"
aes = "0.8.4"
cfb8 = "0.8.1"
hex = "0.4.3"
dirs = "5.0.1"
zip = "2.2.0"
chrono = "0.4.38"
walkdir = "2.5.0"
tokio = "1.40.0"
reqwest = "0.12.7"
lz-str = "0.2.1"
jsonxf = "1.1.1"
base64 = "0.22.1"
serde_json = "1.0.128"
webbrowser = "1.0.1"
open = "5.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
