[package]
name = "burial"
version = "0.0.1"
description = "Tools for TCOAAL"
authors = ["kleineluka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [ ] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
sysinfo = "0.30.12"
fs_extra = "1.3.0"
aes = "0.8.4"
cfb8 = "0.8.1"
hex = "0.4.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
